--- a/style.css
+++ b/style.css
@@ -12,6 +12,17 @@ body {
 }
 
 #header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
   background-color: pink;
   padding: 10px;
 }
@@ -22,6 +33,26 @@ body {
 
 .title:visited {
   color: black;
+}
+
+.nav {
+  width: 30%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.navText {
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+  font-size: large;
+}
+
+.navText:hover {
+  text-decoration: underline;
 }
 
 #projectPageWrapper {
@@ -196,7 +227,16 @@ body {
 
 .detailsDescription {
   height: 65vh;
-  width: 60%;
+  width: 50%;
   text-align: left;
+}
+
+.logos {
+  margin: 20px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 /*# sourceMappingURL=style.css.map */
