--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,10 @@ body {
 }
 
 #header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
   background-color: pink;
   padding: 10px;
 }
@@ -25,6 +29,23 @@ body {
 
 .title:visited {
   color: black;
+}
+
+.nav {
+  width: 30%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.navText {
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+  font-size: large;
+}
+
+.navText:hover {
+  text-decoration: underline;
 }
 
 // Home Page
@@ -158,6 +179,12 @@ body {
 
 .detailsDescription {
   height: 65vh;
-  width: 60%;
+  width: 50%;
   text-align: left;
+}
+
+.logos {
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-around;
 }
