--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
   text-align: center;
   margin: 0;
   font-family: sans-serif;
+  background-color: #353238;
+  color: #24262D;
 }
 
 #header {
@@ -23,8 +25,13 @@ body {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  background-color: pink;
+  background-color: #FF9A5C;
   padding: 10px;
+}
+
+.h2 {
+  margin: 5px 0 20px 0;
+  font-size: large;
 }
 
 .title:link {
@@ -76,6 +83,7 @@ body {
 
 #subTitle {
   margin: 40px 0;
+  font-size: larger;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -109,7 +117,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: 1px solid gray;
+  background-color: #FDFFFC;
+  border-radius: 3px;
 }
 
 .projectTitle {
@@ -227,12 +236,20 @@ body {
 
 .detailsDescription {
   height: 65vh;
-  width: 50%;
-  text-align: left;
+  width: 40%;
+  text-align: justify;
+  text-justify: newspaper;
+  line-height: 1.5;
+}
+
+.images {
+  width: 60%;
+  margin-bottom: 100px;
 }
 
 .logos {
   margin: 20px 0;
+  width: 60%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
