--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Limelight&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap");
+[aos="fade"] {
+  opacity: 0.5;
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+}
+
+[aos="fade"].aos-animate {
+  opacity: 1;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +19,6 @@ body {
   text-align: center;
   margin: 0;
   font-family: sans-serif;
-  background-color: #353238;
   color: #24262D;
 }
 
@@ -95,6 +104,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 100px;
+  color: #FDFFFC;
 }
 
 .projectArea {
@@ -134,6 +144,7 @@ body {
   position: absolute;
   bottom: 10%;
   width: 70%;
+  line-height: 1.3;
 }
 
 #freshHops {
@@ -218,7 +229,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 90vh;
+  height: 70vh;
   text-align: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -228,28 +239,50 @@ body {
           align-items: center;
 }
 
-.detailsTitle {
+.freshHops {
   font-size: 42px;
   font-family: 'Montserrat', sans-serif;
   text-shadow: 2.0px 2.0px #00CEE0;
 }
 
+.movies {
+  font-size: 42px;
+  font-family: 'Limelight', cursive;
+  text-shadow: 2.0px 2.0px gray;
+}
+
+.images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 60%;
+  margin-bottom: 100px;
+}
+
+.movieImg {
+  margin-bottom: 20px;
+}
+
 .detailsDescription {
-  height: 65vh;
+  height: 25vh;
   width: 40%;
+  margin: 30px 0;
   text-align: justify;
   text-justify: newspaper;
   line-height: 1.5;
 }
 
-.images {
-  width: 60%;
-  margin-bottom: 100px;
-}
-
 .logos {
-  margin: 20px 0;
   width: 60%;
+  margin-bottom: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
