--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Limelight&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
 
+[aos="fade"] {
+  opacity: 0.5;
+  transition-property: opacity;
+}
+
+[aos="fade"].aos-animate {
+  opacity: 1;
+}
+
 
 // All pages
 * {
@@ -12,7 +21,6 @@ body {
   text-align: center;
   margin: 0;
   font-family: sans-serif;
-  background-color: #353238;
   color: #24262D;
 }
 
@@ -77,6 +85,7 @@ body {
   text-align: center;
   justify-content: center;
   margin-bottom: 100px;
+  color: #FDFFFC;
 }
 
 .projectArea {
@@ -106,6 +115,7 @@ body {
   position: absolute;
   bottom: 10%;
   width: 70%;
+  line-height: 1.3;
 }
 
 #freshHops {
@@ -173,34 +183,49 @@ body {
 
 .detailPageTitleDiv {
   display: flex;
-  height: 90vh;
+  height: 70vh;
   text-align: center;
   justify-content: center;
   align-items: center;
 }
 
-.detailsTitle {
+.freshHops {
   font-size: 42px;
   font-family: 'Montserrat', sans-serif;
   text-shadow: 2.0px 2.0px #00CEE0;
 }
 
+.movies {
+  font-size: 42px;
+  font-family: 'Limelight', cursive;
+    text-shadow: 2.0px 2.0px gray;
+}
+
+.images {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 60%;
+  margin-bottom: 100px;
+}
+
+.movieImg {
+  margin-bottom: 20px;
+}
+
 .detailsDescription {
-  height: 65vh;
+  height: 25vh;
   width: 40%;
+  margin: 30px 0;
   text-align: justify;
   text-justify: newspaper;
   line-height: 1.5;
 }
 
-.images {
-  width: 60%;
-  margin-bottom: 100px;
-}
-
 .logos {
-  margin: 20px 0;
   width: 60%;
+  margin-bottom: 60px;
   display: flex;
   justify-content: space-around;
 }
