--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Limelight&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600&display=swap');
 
 [aos="fade"] {
   opacity: 0.5;
@@ -20,7 +21,7 @@
 body {
   text-align: center;
   margin: 0;
-  font-family: sans-serif;
+  font-family: 'Oswald', sans-serif;
   color: #24262D;
 }
 
@@ -29,8 +30,12 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  background-color: #FF9A5C;
+  background-color: #e77041;
   padding: 10px;
+}
+
+.h1 {
+  font-size: 42px;
 }
 
 .h2 {
@@ -85,7 +90,7 @@ body {
   text-align: center;
   justify-content: center;
   margin-bottom: 100px;
-  color: #FDFFFC;
+  color: #24262D;
 }
 
 .projectArea {
@@ -99,6 +104,7 @@ body {
   justify-content: space-between;
   align-items: center;
   background-color: #FDFFFC;
+  border: 1px solid #e7e7e7;
   border-radius: 3px;;
 }
 
