--- a/style.css
+++ b/style.css
@@ -257,6 +257,35 @@ body {
   text-shadow: 2.0px 2.0px gray;
 }
 
+.linksToProjectDiv {
+  width: 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-bottom: 15vh;
+}
+
+.projectLink {
+  font-size: 18px;
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.projectLink:visted {
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.projectLink:hover {
+  color: #00CEE0;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 .images {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -270,7 +299,7 @@ body {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   width: 60%;
-  margin-bottom: 100px;
+  margin-bottom: 15vh;
 }
 
 .movieImg {
@@ -279,11 +308,12 @@ body {
 
 .detailsDescription {
   height: 25vh;
-  width: 40%;
+  width: 45%;
   margin: 30px 0;
   text-align: justify;
   text-justify: newspaper;
   line-height: 1.5;
+  font-size: 20px;
 }
 
 .logos {
@@ -294,5 +324,58 @@ body {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+}
+
+.pageContainer {
+  margin: 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.aboutContainer {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  text-align: left;
+}
+
+.aboutTitle {
+  margin: 30px 0;
+  font-size: 22px;
+}
+
+.aboutText {
+  margin-bottom: 15px;
+  font-size: 19px;
+}
+
+.linkedInLink {
+  color: #0072b1;
+}
+
+.linkedInLink:visited {
+  color: #0072b1;
 }
 /*# sourceMappingURL=style.css.map */
