--- a/style.scss
+++ b/style.scss
@@ -207,13 +207,39 @@ body {
     text-shadow: 2.0px 2.0px gray;
 }
 
+.linksToProjectDiv {
+  width: 40%;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 15vh;
+}
+
+.projectLink {
+  font-size: 18px;;
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.projectLink:visted {
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.projectLink:hover {
+  color: #00CEE0;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 .images {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
   width: 60%;
-  margin-bottom: 100px;
+  margin-bottom: 15vh;
 }
 
 .movieImg {
@@ -222,11 +248,12 @@ body {
 
 .detailsDescription {
   height: 25vh;
-  width: 40%;
+  width: 45%;
   margin: 30px 0;
   text-align: justify;
   text-justify: newspaper;
   line-height: 1.5;
+  font-size: 20px;
 }
 
 .logos {
@@ -234,4 +261,43 @@ body {
   margin-bottom: 60px;
   display: flex;
   justify-content: space-around;
+}
+
+// About Page
+
+.pageContainer {
+  margin: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  
+}
+
+.aboutContainer {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: left;
+  text-align: left;
+}
+
+.aboutTitle {
+  margin: 30px 0;
+  font-size: 22px;;
+}
+
+.aboutText {
+  margin-bottom: 15px;
+  font-size: 19px;
+}
+
+.linkedInLink {
+  color: #0072b1;
+}
+
+.linkedInLink:visited {
+  color: #0072b1;
 }
